# torchada

./: AGENTS.md  README.md  README_CN.md  pyproject.toml
benchmarks/: benchmark_history.json  benchmark_overhead.py
docs/: custom_musa_ops.md
src/torchada/: __init__.py  _cpp_ops.py  _mapping.py  _patch.py
src/torchada/csrc/: musa_ops.mu  ops.cpp  ops.h
src/torchada/utils/: cpp_extension.py
tests/: test_cuda_patching.py  test_mappings.py
tests/csrc/mixed_sources/: add_kernel.cu  mul_kernel.mu
